tests/functional/data/transpiler/common/errors/loops/no_inner.cpp
@kernel void hello_kern() {
    @outer for (int i = 0; i < 10; ++i) {
    }
}
