tests/functional/data/transpiler/common/errors/loops/no_inner.err
no_inner.cpp:1:1: error: [@kernel] requires at least one [@inner] for-loop
    1 | @kernel void hello_kern() {
      | ^
